compiler/actonc/test/typeerrors/ex16.act
actor main(env):
    def test():
        foo: ?list[int] = None
        foo = [1, 2, 3]
#        if foo is not None:
        foo.append(4)
        print(foo)
    test()
    await async env.exit(0)
    
